--- a/src/main/resources/CreateGame.fxml
+++ b/src/main/resources/CreateGame.fxml
@@ -12,7 +12,7 @@
     <children>
         <ImageView fx:id="background" fitHeight="406.0" fitWidth="600.0" layoutY="-2.0" pickOnBounds="true">
             <image>
-                <Image url="/Images/sfondo parquet.jpg" />
+                <Image url="@Images/sfondo parquet.jpg" />
             </image>
         </ImageView>
         <Button fx:id="StartButton" layoutX="277.0" layoutY="279.0" mnemonicParsing="false" onAction="#GotoGame" text="Start" />
