--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fx:id="background" fitHeight="409.0" fitWidth="608.0" layoutX="-5.0" layoutY="-7.0" pickOnBounds="true">
          <image>
-            <Image url="/Images/sfondo parquet.jpg" />
+            <Image url="@Images/sfondo parquet.jpg" />
          </image>
       </ImageView>
       <Label layoutX="204.0" layoutY="91.0" text="Choose an username">
