--- a/src/main/resources/GameStart.fxml
+++ b/src/main/resources/GameStart.fxml
@@ -4,35 +4,35 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.GameStartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.GameStartController">
    <children>
-      <ImageView fx:id="background" fitHeight="400.0" fitWidth="600.0" pickOnBounds="true">
+      <ImageView fx:id="background" fitHeight="720.0" fitWidth="1080.0" pickOnBounds="true">
          <image>
-            <Image url="@Images/sfondo parquet.jpg" />
+            <Image url="@Images/sfondo_parquet.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="TCPButton" layoutX="141.0" layoutY="214.0" mnemonicParsing="false" onAction="#GotoLogin" prefHeight="40.0" prefWidth="100.0" text="TCP">
+      <Button fx:id="TCPButton" layoutX="380.0" layoutY="384.0" mnemonicParsing="false" onAction="#GotoLoginTCP" prefHeight="40.0" prefWidth="100.0" text="TCP">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <ImageView fx:id="Titoloiniziale" fitHeight="200.0" fitWidth="300.0" layoutX="150.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="Titoloiniziale" fitHeight="200.0" fitWidth="300.0" layoutX="390.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/Title 2000x618px.png" />
          </image>
       </ImageView>
-      <Button fx:id="RMIButton" layoutX="366.0" layoutY="214.0" mnemonicParsing="false" onAction="#GotoLogin" prefHeight="40.0" prefWidth="100.0" text="RMI">
+      <Button fx:id="RMIButton" layoutX="617.0" layoutY="384.0" mnemonicParsing="false" onAction="#GotoLoginRMI" prefHeight="40.0" prefWidth="100.0" text="RMI">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Label layoutX="191.0" layoutY="156.0" text="Choose a connection type">
+      <Label layoutX="430.0" layoutY="257.0" text="Choose a connection type">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
    </children>
-</Pane>
+</AnchorPane>
