--- a/src/main/resources/JoinGame.fxml
+++ b/src/main/resources/JoinGame.fxml
@@ -5,27 +5,33 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.JoinGameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.JoinGameController">
    <children>
-      <ImageView fx:id="background" fitHeight="400.0" fitWidth="600.0" pickOnBounds="true">
+      <ImageView fx:id="background" fitHeight="721.0" fitWidth="1083.0" pickOnBounds="true">
          <image>
-            <Image url="@Images/sfondo parquet.jpg" />
+            <Image url="@Images/sfondo_parquet.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="BottoneLogin" layoutX="275.0" layoutY="280.0" mnemonicParsing="false" onAction="#GotoGame" text="Start" />
-      <TextField fx:id="GameID" layoutX="129.0" layoutY="173.0" prefHeight="27.0" prefWidth="333.0">
+      <Button fx:id="BottoneLogin" layoutX="502.0" layoutY="341.0" mnemonicParsing="false" onAction="#GotoGame" text="Start">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <TextField fx:id="GameID" layoutX="304.0" layoutY="228.0" prefHeight="27.0" prefWidth="451.0">
          <font>
             <Font size="13.0" />
          </font>
       </TextField>
-      <Label fx:id="TextLogin1" layoutX="226.0" layoutY="52.0" text="Insert Game ID">
+      <Label fx:id="TextLogin1" layoutX="458.0" layoutY="82.0" text="Insert Game ID">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="TextGameID" layoutX="129.0" layoutY="143.0" text="Game ID" />
+      <Label fx:id="TextGameID" layoutX="314.0" layoutY="191.0" text="Game ID">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
    </children>
-</Pane>
+</AnchorPane>
