--- a/src/main/resources/WaitingRoom.fxml
+++ b/src/main/resources/WaitingRoom.fxml
@@ -7,11 +7,12 @@
 <?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.AnchorPane?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="601.0" fitWidth="774.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Images/sfondo parquet.jpg" />
+            <Image url="@Images/sfondo_parquet.jpg" />
          </image>
       </ImageView>
       <Label layoutX="124.0" layoutY="166.0" text="We are looking for other players">
@@ -20,4 +21,4 @@
          </font>
       </Label>
    </children>
-</Pane>
+</AnchorPane>
