--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -10,28 +10,33 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.LoginController">
    <children>
-      <ImageView fx:id="background" fitHeight="728.0" fitWidth="1087.0" layoutX="-5.0" layoutY="-7.0" pickOnBounds="true">
+      <ImageView fx:id="background" fitHeight="728.0" fitWidth="1108.0" layoutX="-23.0" layoutY="-3.0" pickOnBounds="true">
          <image>
             <Image url="@Images/sfondo_parquet.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="464.0" layoutY="104.0" text="Choose an username">
+      <Label fx:id="LoginText" layoutX="456.0" layoutY="228.0" text="Choose an username">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="UsernameField" layoutX="298.0" layoutY="222.0" prefHeight="26.0" prefWidth="558.0" />
-      <Label layoutX="306.0" layoutY="186.0" text="Username">
+      <TextField fx:id="UsernameField" layoutX="236.0" layoutY="347.0" prefHeight="26.0" prefWidth="639.0" />
+      <Label layoutX="251.0" layoutY="308.0" text="Username">
          <font>
             <Font size="15.0" />
          </font></Label>
-      <Button fx:id="JoinButton" layoutX="383.0" layoutY="361.0" mnemonicParsing="false" onAction="#GotoJoinGame" prefHeight="40.0" prefWidth="127.0" text="Join Game">
+      <Button fx:id="JoinButton" layoutX="304.0" layoutY="431.0" mnemonicParsing="false" onAction="#GotoJoinGame" prefHeight="40.0" prefWidth="127.0" text="Join Game">
          <font>
             <Font size="18.0" />
          </font></Button>
-      <Button fx:id="CreateButton" layoutX="632.0" layoutY="362.0" mnemonicParsing="false" onAction="#GotoCreateGame" text="Create Game">
+      <Button fx:id="CreateButton" layoutX="661.0" layoutY="430.0" mnemonicParsing="false" onAction="#GotoCreateGame" text="Create Game">
          <font>
             <Font size="18.0" />
          </font></Button>
+      <ImageView fitHeight="93.0" fitWidth="322.0" layoutX="398.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/Title%202000x618px.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
