--- a/src/main/resources/ChooseColumn.fxml
+++ b/src/main/resources/ChooseColumn.fxml
@@ -2,15 +2,19 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.ChooseColumnController">
    <children>
-      <ImageView fitHeight="743.0" fitWidth="1162.0" layoutX="-34.0" layoutY="-9.0" pickOnBounds="true">
+      <ImageView fitHeight="743.0" fitWidth="1162.0" layoutX="-38.0" layoutY="-5.0" pickOnBounds="true">
          <image>
             <Image url="@Images/sfondo_parquet.jpg" />
          </image>
@@ -20,25 +24,134 @@
             <Image url="@Images/Title 2000x618px.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="332.0" fitWidth="495.0" layoutX="172.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/livingroom.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="269.0" fitWidth="283.0" layoutX="666.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="269.0" fitWidth="283.0" layoutX="461.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/bookshelf.png" />
          </image>
       </ImageView>
-      <Label layoutX="252.0" layoutY="127.0" text="Now you have to choose a column in your shelfie where you will insert the tiles">
+      <Label layoutX="372.0" layoutY="115.0" text="Choose the tiles you want from the board!">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="Button1" layoutX="698.0" layoutY="215.0" mnemonicParsing="false" onAction="#ChooseColumn0" text="1" />
-      <Button fx:id="Button2" layoutX="740.0" layoutY="216.0" mnemonicParsing="false" onAction="#ChooseColumn1" text="2" />
-      <Button fx:id="Button3" layoutX="787.0" layoutY="214.0" mnemonicParsing="false" onAction="#ChooseColumn2" text="3" />
-      <Button fx:id="Button4" layoutX="828.0" layoutY="215.0" mnemonicParsing="false" onAction="#ChooseButton3" text="4" />
-      <Button fx:id="Button5" layoutX="873.0" layoutY="215.0" mnemonicParsing="false" onAction="#ChooseButton4" text="5" />
+      <Button fx:id="PersonalButton" layoutX="34.0" layoutY="34.0" mnemonicParsing="false" onAction="#GoToPersonalGoalCard" prefHeight="40.0" prefWidth="235.0" text="Show Personal Goal Card">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="CommonButton" layoutX="34.0" layoutY="90.0" mnemonicParsing="false" onAction="#GoToCommonGoalCards" text="Show Common Goal Cards">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="332.0" fitWidth="495.0" layoutX="92.0" layoutY="214.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/livingroom.png" />
+         </image>
+      </ImageView>
+      <GridPane fx:id="LivingRoom" hgap="2.0" layoutX="106.0" layoutY="228.0" prefHeight="306.0" prefWidth="306.0" vgap="2.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="66.0" minWidth="10.0" prefWidth="37.5333251953125" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="61.4" minWidth="0.0" prefWidth="32.333367919921876" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="47.800010681152344" minWidth="0.0" prefWidth="32.86663208007813" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="74.80001068115234" minWidth="0.0" prefWidth="32.866699218749986" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.80000305175781" minWidth="0.0" prefWidth="33.933306884765614" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.79995727539062" minWidth="10.0" prefWidth="31.5333251953125" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.19998779296876" minWidth="10.0" prefWidth="36.066674804687494" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="63.333343505859375" minWidth="10.0" prefWidth="34.46669311523439" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="68.13333129882812" minWidth="10.0" prefWidth="38.1333068847656" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="54.799993896484374" minHeight="10.0" prefHeight="36.59999389648438" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.66666259765625" minHeight="10.0" prefHeight="32.3333251953125" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="67.53333129882812" minHeight="10.0" prefHeight="33.933319091796875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="74.4" minHeight="10.0" prefHeight="32.066680908203125" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="72.26666870117188" minHeight="10.0" prefHeight="37.4666748046875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="72.73334960937501" minHeight="10.0" prefHeight="32.133331298828125" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="67.46668701171876" minHeight="10.0" prefHeight="35.13334960937499" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="50.733306884765625" minHeight="10.0" prefHeight="32.33336181640624" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="56.93332519531248" minHeight="10.0" prefHeight="41.66663818359376" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <ImageView fitHeight="269.0" fitWidth="283.0" layoutX="777.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/bookshelf.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="Player1" layoutX="485.0" layoutY="242.0" text="Label">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="Player2" layoutX="800.0" layoutY="243.0" text="Label">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <GridPane fx:id="Player1Grid" hgap="2.0" layoutX="488.0" layoutY="302.0" prefHeight="212.0" prefWidth="208.0" vgap="2.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="33.6000732421875" minHeight="0.0" prefHeight="33.6000732421875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="27.19992675781249" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <GridPane fx:id="Player2Grid" hgap="2.0" layoutX="805.0" layoutY="303.0" prefHeight="211.0" prefWidth="208.0" vgap="2.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="33.6000732421875" minHeight="0.0" prefHeight="33.6000732421875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="27.19992675781249" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <Label layoutX="546.0" layoutY="557.0" text="Points:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="870.0" layoutY="555.0" text="Points:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="Points1" layoutX="602.0" layoutY="556.0" text="00">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="Points2" layoutX="927.0" layoutY="555.0" text="00">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button fx:id="0" layoutX="495.0" layoutY="521.0" mnemonicParsing="false" onAction="#ChooseColumn" prefHeight="19.0" prefWidth="32.0" text="1" />
+      <Button fx:id="1" layoutX="537.0" layoutY="521.0" mnemonicParsing="false" onAction="#ChooseColumn" prefHeight="19.0" prefWidth="32.0" text="2" />
+      <Button fx:id="2" layoutX="580.0" layoutY="520.0" mnemonicParsing="false" onAction="#ChooseColumn" prefHeight="19.0" prefWidth="32.0" text="3" />
+      <Button fx:id="3" layoutX="620.0" layoutY="520.0" mnemonicParsing="false" onAction="#ChooseColumn" prefHeight="19.0" prefWidth="32.0" text="4" />
+      <Button fx:id="4" layoutX="660.0" layoutY="521.0" mnemonicParsing="false" onAction="#ChooseColumn" prefHeight="19.0" prefWidth="32.0" text="5" />
+      <TextArea layoutX="27.0" layoutY="592.0" prefHeight="126.0" prefWidth="1072.0" />
+      <TextField layoutX="26.0" layoutY="689.0" prefHeight="30.0" prefWidth="998.0" />
+      <Button layoutX="1025.0" layoutY="684.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="78.0" text="Send">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
