--- a/src/main/resources/ChooseTilesNum.fxml
+++ b/src/main/resources/ChooseTilesNum.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,7 +14,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.ChooseTilesNumController">
     <children>
-        <ImageView fitHeight="743.0" fitWidth="1162.0" layoutX="-34.0" layoutY="-9.0" pickOnBounds="true">
+        <ImageView fitHeight="743.0" fitWidth="1162.0" layoutX="-38.0" layoutY="-5.0" pickOnBounds="true">
             <image>
                 <Image url="@Images/sfondo_parquet.jpg" />
             </image>
@@ -23,34 +24,32 @@
                 <Image url="@Images/Title 2000x618px.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="332.0" fitWidth="495.0" layoutX="91.0" layoutY="309.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@Images/livingroom.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="269.0" fitWidth="283.0" layoutX="503.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="269.0" fitWidth="283.0" layoutX="461.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@Images/bookshelf.png" />
             </image>
         </ImageView>
-        <Label layoutX="326.0" layoutY="125.0" text="Choose how many tiles you want to take from the board">
+        <Label layoutX="372.0" layoutY="115.0" text="Choose the tiles you want from the board!">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
         </Label>
-      <TextField fx:id="NumOfTiles" layoutX="422.0" layoutY="223.0" prefHeight="26.0" prefWidth="280.0" />
-      <Button fx:id="ConfirmButton" layoutX="722.0" layoutY="224.0" mnemonicParsing="false" onAction="#GoToChooseTiles" text="Confirm" />
-      <Button fx:id="PersonalButton" layoutX="811.0" layoutY="372.0" mnemonicParsing="false" onAction="#GoToPersonalGoalCard" prefHeight="40.0" prefWidth="235.0" text="Show Personal Goal Card">
+      <Button fx:id="PersonalButton" layoutX="34.0" layoutY="34.0" mnemonicParsing="false" onAction="#GoToPersonalGoalCard" prefHeight="40.0" prefWidth="235.0" text="Show Personal Goal Card">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button fx:id="CommonButton" layoutX="815.0" layoutY="453.0" mnemonicParsing="false" onAction="#GoToCommonGoalCards" text="Show Common Goal Cards">
+      <Button fx:id="CommonButton" layoutX="34.0" layoutY="90.0" mnemonicParsing="false" onAction="#GoToCommonGoalCards" text="Show Common Goal Cards">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <GridPane fx:id="LivingRoom" layoutX="103.0" layoutY="323.0" prefHeight="304.0" prefWidth="307.0">
+        <ImageView fitHeight="332.0" fitWidth="495.0" layoutX="92.0" layoutY="214.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@Images/livingroom.png" />
+            </image>
+        </ImageView>
+      <GridPane fx:id="LivingRoom" hgap="2.0" layoutX="106.0" layoutY="228.0" prefHeight="306.0" prefWidth="306.0" vgap="2.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="66.0" minWidth="10.0" prefWidth="37.5333251953125" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="61.4" minWidth="0.0" prefWidth="32.333367919921876" />
@@ -74,5 +73,90 @@
             <RowConstraints maxHeight="56.93332519531248" minHeight="10.0" prefHeight="41.66663818359376" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
+      <ImageView fitHeight="269.0" fitWidth="283.0" layoutX="777.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/bookshelf.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="Player1" layoutX="485.0" layoutY="242.0" text="Label">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="Player2" layoutX="800.0" layoutY="243.0" text="Label">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <GridPane fx:id="Player1Grid" hgap="2.0" layoutX="488.0" layoutY="302.0" prefHeight="212.0" prefWidth="208.0" vgap="2.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="33.6000732421875" minHeight="0.0" prefHeight="33.6000732421875" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="27.19992675781249" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
+      <GridPane fx:id="Player2Grid" hgap="2.0" layoutX="805.0" layoutY="303.0" prefHeight="211.0" prefWidth="208.0" vgap="2.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="33.6000732421875" minHeight="0.0" prefHeight="33.6000732421875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="27.19992675781249" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <Label layoutX="546.0" layoutY="557.0" text="Points:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="870.0" layoutY="555.0" text="Points:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="Points1" layoutX="602.0" layoutY="556.0" text="00">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="Points2" layoutX="927.0" layoutY="555.0" text="00">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Button layoutX="495.0" layoutY="521.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="32.0" text="1" />
+      <Button layoutX="537.0" layoutY="521.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="32.0" text="2" />
+      <Button layoutX="580.0" layoutY="520.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="32.0" text="3" />
+      <Button layoutX="620.0" layoutY="520.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="32.0" text="4" />
+      <Button layoutX="660.0" layoutY="521.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="32.0" text="5" />
+      <TextArea layoutX="27.0" layoutY="592.0" prefHeight="126.0" prefWidth="1072.0" />
+      <TextField layoutX="26.0" layoutY="689.0" prefHeight="30.0" prefWidth="998.0" />
+      <Button layoutX="1025.0" layoutY="684.0" mnemonicParsing="false" text="Send">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="EndButton" layoutX="805.0" layoutY="110.0" mnemonicParsing="false" onAction="#EndTurn" prefHeight="40.0" prefWidth="156.0" text="END TURN">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
