--- a/src/main/resources/CreateGame.fxml
+++ b/src/main/resources/CreateGame.fxml
@@ -8,31 +8,36 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.CreateGameViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.CreateGameViewController">
     <children>
-        <ImageView fx:id="background" fitHeight="738.0" fitWidth="1089.0" layoutX="-5.0" layoutY="-16.0" pickOnBounds="true">
+        <ImageView fx:id="background" fitHeight="720.0" fitWidth="1080.0" pickOnBounds="true">
             <image>
                 <Image url="@Images/sfondo_parquet.jpg" />
             </image>
         </ImageView>
-        <Button fx:id="StartButton" layoutX="517.0" layoutY="418.0" mnemonicParsing="false" onAction="#GotoGame" text="Start">
+      <ImageView fitHeight="150.0" fitWidth="500.0" layoutX="290.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/Title 2000x618px.png" />
+         </image>
+      </ImageView>
+        <Button fx:id="StartButton" layoutX="509.0" layoutY="420.0" mnemonicParsing="false" onAction="#GotoGame" text="Start">
          <font>
             <Font size="18.0" />
          </font></Button>
-        <TextField fx:id="NumOfPlayers" layoutX="260.0" layoutY="341.0" prefHeight="27.0" prefWidth="617.0">
+        <TextField fx:id="NumOfPlayers" layoutX="230.0" layoutY="355.0" prefHeight="40.0" prefWidth="620.0">
             <font>
                 <Font size="13.0" />
             </font>
         </TextField>
-        <Label fx:id="TextLogin2" layoutX="400.0" layoutY="138.0" text="Insert the number of players">
+        <Label fx:id="TextLogin2" layoutX="344.0" layoutY="200.0" text="Insert the number of players">
             <font>
-                <Font name="System Bold" size="21.0" />
+                <Font name="System Bold" size="28.0" />
             </font>
         </Label>
         <Label fx:id="Textusername" layoutX="130.0" layoutY="96.0" />
-        <Label fx:id="TextNumOfPlayers" layoutX="289.0" layoutY="301.0" text="Numbers of players">
+        <Label fx:id="TextNumOfPlayers" layoutX="231.0" layoutY="320.0" text="Number of Players:">
          <font>
-            <Font size="15.0" />
+            <Font size="18.0" />
          </font></Label>
     </children>
 </AnchorPane>
