--- a/src/main/resources/JoinGame.fxml
+++ b/src/main/resources/JoinGame.fxml
@@ -8,30 +8,35 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.JoinGameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.JoinGameController">
    <children>
-      <ImageView fx:id="background" fitHeight="721.0" fitWidth="1083.0" pickOnBounds="true">
+      <ImageView fx:id="background" fitHeight="720.0" fitWidth="1080.0" pickOnBounds="true">
          <image>
             <Image url="@Images/sfondo_parquet.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="BottoneLogin" layoutX="510.0" layoutY="393.0" mnemonicParsing="false" onAction="#GotoGame" text="Start">
+      <ImageView fitHeight="150.0" fitWidth="500.0" layoutX="290.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/Title 2000x618px.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="BottoneLogin" layoutX="509.0" layoutY="420.0" mnemonicParsing="false" onAction="#GotoGame" text="Start">
          <font>
             <Font size="18.0" />
          </font></Button>
-      <TextField fx:id="GameID" layoutX="270.0" layoutY="310.0" prefHeight="27.0" prefWidth="576.0">
+      <TextField fx:id="GameID" layoutX="230.0" layoutY="355.0" prefHeight="40.0" prefWidth="620.0">
          <font>
             <Font size="13.0" />
          </font>
       </TextField>
-      <Label fx:id="TextLogin1" layoutX="465.0" layoutY="110.0" text="Insert Game ID">
+      <Label fx:id="TextLogin1" layoutX="432.0" layoutY="200.0" text="Insert Game ID">
          <font>
-            <Font name="System Bold" size="21.0" />
+            <Font name="System Bold" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="TextGameID" layoutX="280.0" layoutY="284.0" text="Game ID">
+      <Label fx:id="TextGameID" layoutX="231.0" layoutY="320.0" text="Game ID:">
          <font>
-            <Font size="15.0" />
+            <Font size="18.0" />
          </font></Label>
    </children>
 </AnchorPane>
