--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -8,34 +8,34 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.LoginController">
    <children>
-      <ImageView fx:id="background" fitHeight="728.0" fitWidth="1108.0" layoutX="-23.0" layoutY="-3.0" pickOnBounds="true">
+      <ImageView fx:id="background" fitHeight="720.0" fitWidth="1080.0" pickOnBounds="true">
          <image>
             <Image url="@Images/sfondo_parquet.jpg" />
          </image>
       </ImageView>
-      <Label fx:id="LoginText" layoutX="456.0" layoutY="228.0" text="Choose an username">
+      <Label fx:id="LoginText" layoutX="395.0" layoutY="200.0" text="Choose an username">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="28.0" />
          </font>
       </Label>
-      <TextField fx:id="UsernameField" layoutX="236.0" layoutY="347.0" prefHeight="26.0" prefWidth="639.0" />
-      <Label layoutX="251.0" layoutY="308.0" text="Username">
+      <TextField fx:id="UsernameField" layoutX="230.0" layoutY="355.0" prefHeight="40.0" prefWidth="620.0" />
+      <Label layoutX="229.0" layoutY="320.0" text="Username:">
          <font>
-            <Font size="15.0" />
+            <Font size="18.0" />
          </font></Label>
-      <Button fx:id="JoinButton" layoutX="304.0" layoutY="431.0" mnemonicParsing="false" onAction="#GotoJoinGame" prefHeight="40.0" prefWidth="127.0" text="Join Game">
+      <Button fx:id="JoinButton" layoutX="310.0" layoutY="420.0" mnemonicParsing="false" onAction="#GotoJoinGame" prefHeight="40.0" prefWidth="130.0" text="Join Game">
          <font>
             <Font size="18.0" />
          </font></Button>
-      <Button fx:id="CreateButton" layoutX="661.0" layoutY="430.0" mnemonicParsing="false" onAction="#GotoCreateGame" text="Create Game">
+      <Button fx:id="CreateButton" layoutX="630.0" layoutY="420.0" mnemonicParsing="false" onAction="#GotoCreateGame" prefWidth="130.0" text="Create Game">
          <font>
             <Font size="18.0" />
          </font></Button>
-      <ImageView fitHeight="93.0" fitWidth="322.0" layoutX="398.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="150.0" fitWidth="500.0" layoutX="290.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Images/Title%202000x618px.png" />
+            <Image url="@Images/Title 2000x618px.png" />
          </image>
       </ImageView>
    </children>
