added chatmessage in gui and added exception in sendPrivateMessage

--- a/src/main/resources/EndTurn.fxml
+++ b/src/main/resources/EndTurn.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.EndTurnController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.it.view.GUI.EndTurnController">
     <children>
         <ImageView fitHeight="743.0" fitWidth="1162.0" pickOnBounds="true">
             <image>
@@ -114,8 +114,8 @@
             </rowConstraints>
         </GridPane>
         <TextArea layoutX="550.0" layoutY="570.0" prefHeight="120.0" prefWidth="584.0" />
-        <TextField layoutX="550.0" layoutY="689.0" prefHeight="30.0" prefWidth="509.0" />
-        <Button layoutX="1059.0" layoutY="679.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="75.0" text="Send">
+        <TextField fx:id="chatMessage" layoutX="550.0" layoutY="689.0" prefHeight="30.0" prefWidth="509.0" />
+        <Button fx:id="sendMessageButton" layoutX="1059.0" layoutY="679.0" mnemonicParsing="false" onAction="#sendMessage" prefHeight="30.0" prefWidth="75.0" text="Send">
             <font>
                 <Font size="18.0" />
             </font>
